--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <script>
+      // var width = document.documentElement.clientWidth || document.body.clientWidth;
+      // var ratio = width / 375;
+      // var fontSize = 100 * ratio;
+      // document.getElementsByTagName('html')[0].style['font-size'] = fontSize + 'px';
+
+      var width = document.documentElement.clientWidth || document.body.clientWidth;
+      var ratio = width /375;
+      var fontSize = 100 * ratio;
+      document.getElementsByTagName('html')[0].style['font-size'] = fontSize + 'px';
+
+    </script>
   </head>
   <body>
     <div id="app"></div>
